--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ thead tr {
    background-position: center;
    background-size: 80%;
 }
-.cell.shown {
+.cell:not([data-shown="false"]) {
    padding: 2px;
 
    cursor: default;
@@ -152,7 +152,7 @@ thead tr {
    border-width: 2px;
    background-color: #BBBBBB;
 }
-.cell.shown svg {
+.cell:not([data-shown="false"]) svg {
    position: relative;
    top: 2px;
 
@@ -163,10 +163,10 @@ thead tr {
 
    text-align: center;
 }
-#mainBoard .cell.shown:first-child {
+#mainBoard .cell:not([data-shown="false"]):first-child {
    border-left-width: 4px;
 }
-#mainBoard .cell.shown:last-child {
+#mainBoard .cell:not([data-shown="false"]):last-child {
    border-right-width: 4px;
 }
 #mainBoard tr:last-child .cell.shown {
